# OMuProCU-experiments

./: README.md  experiment-latency-tcp.sh  experiment-latency-udp.sh  experiment-proto.sh  meta-run-experiment.sh  pinger-experiment.sh  pinger-test.py  requirements.txt  run-experiment-helper.sh
evaluation/: ping-results-evaluation.py  timemeasurement_postprocessing.py
experiment-files/: TDC-2.yaml  TDC.yaml
experiments/: experiment-setup-1.py
speedtest/: Cargo.toml  client_config.yaml  evaluation.py  server_config.yaml
speedtest/src/: UDPClient.rs  UDPServer.rs  lib.rs  main.rs
speedtest/src/udp_application/: mod.rs
utils/: cleanup_experiments.sh  cleanup_orchestrator.sh  copy_results.sh  enable_vxlan_h1_pinger.sh
