[package]
name = "udpbenchmark"
version = "0.2.0"
authors = ["Timo Geier <your.email@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "0.2", features = ["full", "time"] }
# tokio-udp = "0.1.6"
# tokio-util = "0.7.12"
# tokio-core = "0.1.6"
csv = "1.3.0"
socket2 = "0.4"
pnet = "0.35.0"
threadpool = "1.8"
core_affinity = "0.8.1"
# packet_rs = "0.2.0"
yaml-rust = { version = "0.8.1", package = "yaml-rust2" }
log = "0.4"
env_logger = "0.9"
rand = "0.8"

[[bin]]
name = "UDPClient"
path = "src/UDPClient.rs"

[[bin]]
name = "UDPServer"
path = "src/UDPServer.rs"